add endpoint to fetch current user's sleeping record
