# app/serializers/clock_in_summary_serializer.rb
@@ -1,0 +1,6 @@
+class ClockInSummarySerializer
+  include JSONAPI::Serializer
+
+  attributes :id, :user_id, :schedule_date, :status, :sleep_start,
+             :sleep_end, :sleep_duration_minute, :created_at, :updated_at
+end
