# swagger/v1/swagger.yaml
@@ -4,6 +4,49 @@ info:
   title: API V1
   version: v1
 paths:
+  "/api/v1/users/{user_id}/clock_in_summaries":
+    get:
+      summary: Get current user's sleeping record
+      tags:
+      - Sleeping Record
+      parameters:
+      - name: user_id
+        in: path
+        description: User ID which the clock in will be performed for
+        required: true
+        schema:
+          type: integer
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: integer
+      - name: start_date
+        in: query
+        required: false
+        schema:
+          type: string
+          format: date
+          description: optional, the default value will be from 1 week ago
+      - name: end_date
+        in: query
+        required: false
+        schema:
+          type: string
+          format: date
+          description: optional, the default value will be the current date
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/summary_clock_in_list_record"
   "/api/v1/users/{user_id}/clock_ins":
     post:
       summary: Create Clock In Record
@@ -375,6 +418,60 @@ components:
                 example: clock_in
               attributes:
                 "$ref": "#/components/schemas/clock_in_record"
+        links:
+          "$ref": "#/components/schemas/pagination_links"
+        meta:
+          type: object
+          properties:
+            pagination:
+              "$ref": "#/components/schemas/pagination_details"
+    summary_clock_in_record:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        user_id:
+          type: integer
+          example: 100
+        schedule_date:
+          type: string
+          format: date
+        sleep_start:
+          type: string
+          format: date-time
+          nullable: true
+        sleep_end:
+          type: string
+          format: date-time
+          nullable: true
+        status:
+          type: string
+          enum:
+          - completed
+          - incomplete
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+    summary_clock_in_list_record:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: string
+                example: '10'
+              type:
+                type: string
+                example: clock_in
+              attributes:
+                "$ref": "#/components/schemas/summary_clock_in_record"
         links:
           "$ref": "#/components/schemas/pagination_links"
         meta:
